Advance in the implementation of beans. - Correct loading dialog z-index. - Enter object automatically when find returns one row.

--- a/gdmatrix-web/src/main/webapp/templates/pf_app/css/template.css
+++ b/gdmatrix-web/src/main/webapp/templates/pf_app/css/template.css
@@ -437,3 +437,7 @@ body .ui-menu .ui-menu-list .ui-submenu-child .ui-menuitem-link
 { 
   background: url('/themes/default/images/current.png') no-repeat !important;
 }
+.loading-icon-container
+{
+  z-index: 200000 !important;
+}
