--- a/gdmatrix-web/src/main/webapp/topframe/css/topframe.css
+++ b/gdmatrix-web/src/main/webapp/topframe/css/topframe.css
@@ -329,7 +329,7 @@ div.skipDiv#templateSkipBottom a
 .bannerFixed
 {
   position: fixed;
-  z-index: 1000000;
+  z-index: 100000;
 }
 
 .webWarningMessage
